// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Should close sidebar when clicked outside sidebar 1`] = `
<section>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-94 mui-fixed MuiPaper-elevation0"
    style=""
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-100 MuiToolbar-gutters"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root Navbar__leftbutton makeStyles-leftBtn-95"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Navbar__titlebar makeStyles-titlebar-97"
      >
        <div
          class="makeStyles-titleLeft-96"
        />
        <button
          aria-controls="simple-menu"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-small-101 MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
  <div
    class="PrivateSwipeArea-root-107 PrivateSwipeArea-anchorLeft-108"
    style="width: 50px;"
  />
  <div
    class="makeStyles-contentWrapper-92"
  >
    <div
      class="makeStyles-shift-93"
    />
    <div
      class="makeStyles-shift-93"
    />
  </div>
</section>
`;

exports[`Layout Should open sidebar when left button in navbar is clicked 1`] = `
<section
  aria-hidden="true"
>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-67 mui-fixed MuiPaper-elevation0"
    style="padding-right: 0px;"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-73 MuiToolbar-gutters"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root Navbar__leftbutton makeStyles-leftBtn-68"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Navbar__titlebar makeStyles-titlebar-70"
      >
        <div
          class="makeStyles-titleLeft-69"
        />
        <button
          aria-controls="simple-menu"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-small-74 MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
  <div
    class="PrivateSwipeArea-root-80 PrivateSwipeArea-anchorLeft-81"
    style="width: 50px;"
  />
  <div
    class="makeStyles-contentWrapper-65"
  >
    <div
      class="makeStyles-shift-66"
    />
    <div
      class="makeStyles-shift-66"
    />
  </div>
</section>
`;

exports[`Layout Should render without props 1`] = `
<section>
  <header
    class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-4 mui-fixed MuiPaper-elevation0"
  >
    <div
      class="MuiToolbar-root MuiToolbar-regular makeStyles-toolbar-10 MuiToolbar-gutters"
    >
      <button
        aria-hidden="true"
        class="MuiButtonBase-root MuiIconButton-root Navbar__leftbutton makeStyles-leftBtn-5"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorSecondary"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
      <div
        class="Navbar__titlebar makeStyles-titlebar-7"
      >
        <div
          class="makeStyles-titleLeft-6"
        />
        <button
          aria-controls="simple-menu"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root makeStyles-small-11 MuiSvgIcon-colorSecondary"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </header>
  <div
    class="PrivateSwipeArea-root-17 PrivateSwipeArea-anchorLeft-18"
    style="width: 50px;"
  />
  <div
    class="makeStyles-contentWrapper-2"
  >
    <div
      class="makeStyles-shift-3"
    />
    <div
      class="makeStyles-shift-3"
    />
  </div>
</section>
`;
